Errores sonarLint solucionados, atributos hechos todos privados en controlador